cabal-version: 2.2
-- https://cabal.readthedocs.io/en/latest/developing-packages.html#package-descriptions

name: reveille
version: 0.0.0

category: Web
description: Reveille aggregates Haskell Weekly feeds.
extra-source-files: README.markdown
license: MIT
maintainer: Taylor Fausak
synopsis: Aggregates Haskell Weekly feeds.

executable reveille
  build-depends:
    async ^>= 2.2.1,
    atom-conduit ^>= 0.5.0,
    base ^>= 4.11.1,
    bytestring ^>= 0.10.8,
    conduit ^>= 1.3.0,
    http-conduit ^>= 2.3.0,
    http-types ^>= 0.12.1,
    lucid ^>= 2.9.9,
    mono-traversable ^>= 1.0.8,
    rss-conduit ^>= 0.4.2,
    sqlite-simple ^>= 0.4.14,
    text ^>= 1.2.3,
    time ^>= 1.8.0,
    uri-bytestring ^>= 0.3.1,
    wai ^>= 3.2.1,
    warp ^>= 3.2.18,
    xml-conduit ^>= 1.8.0,
    xml-types ^>= 0.3.6,
  default-language: Haskell2010
  ghc-options:
    -optP -Wno-nonportable-include-path
    -rtsopts
    -threaded
    -Weverything
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
    -Wno-missed-specializations
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  main-is: Main.hs
