cabal-version: 2.4
-- https://cabal.readthedocs.io/en/latest/developing-packages.html#package-descriptions

name: reveille
version: 1.0.0.0

category: Web
description: Reveille aggregates Haskell Weekly feeds.
license: ISC
maintainer: Taylor Fausak
synopsis: Aggregates Haskell Weekly feeds.

executable reveille
  autogen-modules: Paths_reveille
  build-depends:
    aeson ^>= 1.4.2,
    async ^>= 2.2.1,
    base ^>= 4.12.0,
    containers ^>= 0.6.0,
    feed ^>= 1.0.1,
    http-client ^>= 0.5.14,
    http-client-tls ^>= 0.3.5,
    http-types ^>= 0.12.3,
    lucid ^>= 2.9.11,
    network-uri ^>= 2.6.1,
    say ^>= 0.1.0,
    stm ^>= 2.5.0,
    text ^>= 1.2.3,
    time ^>= 1.8.0,
    vector ^>= 0.12.0,
    wai ^>= 3.2.2,
    warp ^>= 3.2.27,
  default-language: Haskell2010
  ghc-options:
    -optP -Wno-nonportable-include-path
    -rtsopts
    -threaded
    -Weverything
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
    -Wno-missed-specializations
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  main-is: reveille.hs
  other-modules: Paths_reveille
